--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": {
-    "type": "git",
-    "url": " "
-  },
+  "repository": "Fabriquartz/ember-railio-pop-over",
   "engines": {
     "node": ">= 0.10.0"
   },
