--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-railio-pop-over",
   "dependencies": {
-    "ember": "1.13.6",
+    "ember": "2.0.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
@@ -13,5 +13,8 @@
     "qunit": "~1.18.0",
     "blanket": "~1.1.5",
     "tether": "~0.7.2"
+  },
+  "resolutions": {
+    "ember": "2.0.0"
   }
 }
