--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,17 @@
 {
   "name": "ember-railio-pop-over",
   "dependencies": {
+    "blanket": "1.1.5",
     "ember": "2.1.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qunit": "0.4.9",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.3",
-    "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0",
-    "blanket": "~1.1.5",
-    "tether": "~0.7.2"
+    "ember-cli-shims": "0.0.6",
+    "ember-cli-test-loader": "0.2.1",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit": "0.4.16",
+    "ember-qunit-notifications": "0.1.0",
+    "jquery": "1.11.3",
+    "tether": "1.2.0",
+    "loader.js": "ember-cli/loader.js#3.4.0",
+    "qunit": "~1.20.0"
   },
   "resolutions": {
     "ember": "2.1.0"
