--- a/package.json
+++ b/package.json
@@ -18,33 +18,34 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "broccoli-jscs": "1.1.0",
-    "ember-cli": "1.13.13",
-    "ember-cli-app-version": "1.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.4",
+    "broccoli-asset-rev": "^2.5.0",
+    "broccoli-jscs": "1.4.1",
+    "ember-cli": "2.10.0",
+    "ember-cli-app-version": "2.0.1",
+    "ember-cli-content-security-policy": "0.5.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-ic-ajax": "1.0.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^3.0.2",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^1.2.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-resolver": "^2.0.3",
-    "ember-tether": "0.3.0",
-    "ember-try": "~0.0.8"
+    "ember-export-application-global": "^1.1.1",
+    "ember-resolver": "^2.1.0",
+    "ember-tether": "0.3.1",
+    "loader.js": "^4.0.11"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.3",
-    "ember-cli-htmlbars": "1.0.1",
-    "ember-cli-sass": "4.0.0-beta.5"
+    "ember-cli-babel": "^5.1.10",
+    "ember-cli-htmlbars": "1.1.1",
+    "ember-cli-sass": "5.6.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
