--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,9 @@
     "ember-qunit-notifications": "0.1.0",
     "tether": "1.4.0",
     "qunit": "~2.1.0"
+  },
+  "resolutions": {
+    "ember-cli-shims": "0.1.3",
+    "ember": "2.10.0"
   }
 }
