--- a/package.json
+++ b/package.json
@@ -9,43 +9,51 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember try:testall"
+    "test": "ember try:each"
   },
   "repository": "Fabriquartz/ember-railio-pop-over",
   "engines": {
-    "node": ">= 0.12.0"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-jscs": "1.4.1",
-    "ember-cli": "2.10.0",
-    "ember-cli-app-version": "2.0.1",
-    "ember-cli-content-security-policy": "0.5.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-ajax": "3.0.0",
+    "ember-cli": "2.14.0",
+    "ember-cli-app-version": "3.0.0",
+    "ember-cli-content-security-policy": "0.6.1",
+    "ember-cli-dependency-checker": "^2.0.1",
+    "ember-cli-eslint": "^4.2.0",
+    "ember-cli-htmlbars": "^2.0.2",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-ic-ajax": "1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^3.0.2",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-inject-live-reload": "^1.7.0",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-release": "1.0.0-beta.2",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-test-loader": "^1.1.0",
+    "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.1.1",
-    "ember-resolver": "^2.1.0",
-    "ember-tether": "0.3.1",
-    "loader.js": "^4.0.11"
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.3.0",
+    "ember-source": "2.14.1",
+    "ember-tether": "1.0.0-beta.0",
+    "eslint-plugin-ember-suave": "^1.0.0",
+    "loader.js": "^4.5.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.10",
-    "ember-cli-htmlbars": "1.1.1",
-    "ember-cli-sass": "5.6.0"
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "2.0.2",
+    "ember-cli-sass": "7.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
