--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.2",
     "broccoli-asset-rev": "^2.6.0",
     "ember-ajax": "3.0.0",
-    "ember-cli": "2.18.1",
+    "ember-cli": "3.0.0",
     "ember-cli-app-version": "3.1.3",
     "ember-cli-content-security-policy": "1.0.0",
     "ember-cli-dependency-checker": "^2.1.0",
@@ -30,19 +30,20 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-ic-ajax": "1.0.0",
     "ember-cli-inject-live-reload": "^1.7.0",
-    "ember-cli-qunit": "^4.3.0",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "^2.2.0",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-uglify": "^2.0.2",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "2.18.0",
+    "ember-resolver": "^4.5.2",
+    "ember-source": "3.0.0",
     "ember-tether": "1.0.0-beta.0",
+    "ember-try": "^0.2.23",
     "eslint-plugin-ember-suave": "^1.0.0",
     "loader.js": "^4.6.0"
   },
@@ -50,9 +51,9 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^6.11.0",
+    "ember-cli-babel": "^6.12.0",
     "ember-cli-htmlbars": "2.0.3",
-    "ember-cli-sass": "7.1.4"
+    "ember-cli-sass": "7.1.7"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
