--- a/package.json
+++ b/package.json
@@ -2,57 +2,60 @@
   "name": "ember-railio-pop-over",
   "version": "0.0.15",
   "description": "Addon for pop-over",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember try:each"
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
-  "repository": "Fabriquartz/ember-railio-pop-over",
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "broccoli-asset-rev": "^2.6.0",
-    "ember-ajax": "3.0.0",
-    "ember-cli": "3.0.0",
-    "ember-cli-app-version": "3.1.3",
+    "babel-eslint": "^8.2.6",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-ajax": "3.1.0",
+    "ember-cli": "~3.3.0",
+    "ember-cli-app-version": "3.2.0",
     "ember-cli-content-security-policy": "1.0.0",
-    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-ic-ajax": "1.0.0",
-    "ember-cli-inject-live-reload": "^1.7.0",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "^2.2.0",
-    "ember-cli-uglify": "^2.0.2",
+    "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.2",
-    "ember-source": "3.0.0",
-    "ember-tether": "1.0.0-beta.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.3.1",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-tether": "~1.0.0",
     "ember-try": "^0.2.23",
     "eslint-plugin-ember-suave": "^1.0.0",
-    "loader.js": "^4.6.0"
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.7.1"
   },
   "keywords": [
     "ember-addon"
   ],
+  "repository": "Fabriquartz/ember-railio-pop-over",
+  "license": "MIT",
+  "author": "",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
   "dependencies": {
-    "ember-cli-babel": "^6.12.0",
-    "ember-cli-htmlbars": "2.0.3",
+    "ember-cli-babel": "^6.16.0",
+    "ember-cli-htmlbars": "3.0.0",
     "ember-cli-sass": "7.1.7"
   },
   "ember-addon": {
