--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@ember/optional-features": "^0.7.0",
     "babel-eslint": "^10.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.7.1",
+    "ember-cli": "~3.8.1",
     "ember-cli-app-version": "3.2.0",
-    "ember-cli-content-security-policy": "1.0.0",
+    "ember-cli-content-security-policy": "^1.0.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
@@ -27,7 +27,7 @@
     "ember-cli-inject-live-reload": "^2.0.0",
     "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-template-lint": "^1.0.0-beta.2",
     "ember-cli-test-loader": "^2.2.0",
     "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -36,7 +36,7 @@
     "ember-load-initializers": "^2.0.0",
     "ember-qunit": "^4.2.0",
     "ember-resolver": "^5.0.1",
-    "ember-source": "~3.7.0",
+    "ember-source": "~3.8.0",
     "ember-source-channel-url": "^1.1.0",
     "ember-tether": "~1.0.0",
     "ember-try": "^1.1.0",
@@ -58,7 +58,7 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.4.0",
-    "ember-cli-htmlbars": "3.0.0",
+    "ember-cli-htmlbars": "3.0.1",
     "ember-cli-sass": "10.0.0"
   },
   "ember-addon": {
