--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "build": "ember build"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || >= 10.*"
   },
   "devDependencies": {
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
     "babel-eslint": "^10.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.7.1",
+    "ember-cli": "~3.10.1",
     "ember-cli-app-version": "3.2.0",
     "ember-cli-content-security-policy": "1.0.0",
     "ember-cli-dependency-checker": "^3.1.0",
@@ -34,16 +34,16 @@
     "ember-disable-proxy-controllers": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
-    "ember-qunit": "^4.2.0",
+    "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
-    "ember-source": "~3.7.0",
+    "ember-source": "~3.10.0",
     "ember-source-channel-url": "^1.1.0",
     "ember-tether": "~1.0.0",
     "ember-try": "^1.1.0",
     "eslint-plugin-ember-suave": "^1.0.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0",
+    "qunit-dom": "^0.8.4",
     "sass": "^1.16.1"
   },
   "keywords": [
@@ -57,8 +57,8 @@
     "test": "tests"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.4.0",
-    "ember-cli-htmlbars": "3.0.0",
+    "ember-cli-babel": "^7.7.3",
+    "ember-cli-htmlbars": "3.0.1",
     "ember-cli-sass": "10.0.0"
   },
   "ember-addon": {
