Use ember-attacher instead of ember-tether

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ember/optional-features": "^0.7.0",
     "babel-eslint": "^10.0.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-attacher": "^0.14.0",
     "ember-cli": "~3.10.1",
     "ember-cli-app-version": "3.2.0",
     "ember-cli-content-security-policy": "^1.0.0",
@@ -38,7 +39,6 @@
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.10.0",
     "ember-source-channel-url": "^1.1.0",
-    "ember-tether": "~1.0.0",
     "ember-try": "^1.1.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-node": "^9.0.1",
