--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
-    "babel-eslint": "^10.0.0",
+    "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-attacher": "^0.14.0",
     "ember-cli": "~3.10.1",
@@ -28,9 +28,10 @@
     "ember-cli-inject-live-reload": "^2.0.0",
     "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.2",
+    "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-test-loader": "^2.2.0",
-    "ember-cli-uglify": "^2.1.0",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-decorators": "^6.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-disable-proxy-controllers": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
@@ -38,7 +39,7 @@
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.10.0",
-    "ember-source-channel-url": "^1.1.0",
+    "ember-source-channel-url": "^2.0.0",
     "ember-try": "^1.1.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-node": "^9.0.1",
@@ -59,7 +60,7 @@
   "dependencies": {
     "ember-cli-babel": "^7.7.3",
     "ember-cli-htmlbars": "3.0.1",
-    "ember-cli-sass": "10.0.0"
+    "ember-cli-sass": "10.0.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
