--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ env:
   - EMBER_TRY_SCENARIO=ember-release
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
+  - EMBER_TRY_SCENARIO=ember-lts-3.4
+  - EMBER_TRY_SCENARIO=ember-lts-3.8
 
 matrix:
   fast_finish: true
