--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
   "dependencies": {
     "ember-cli-babel": "^7.7.3",
     "ember-cli-htmlbars": "3.0.1",
-    "ember-cli-sass": "10.0.1"
+    "ember-cli-sass": "10.0.1",
+    "ember-decorators-polyfill": "^1.0.6"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
