--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 ---
 language: node_js
 node_js:
-  - "6.9.1"
+  # we recommend testing addons with the same minimum supported node version as Ember CLI
+  # so that your addon works for all apps
+  - "8"
 
 sudo: true
 dist: trusty
@@ -20,11 +22,10 @@ cache:
 env:
   - EMBER_TRY_SCENARIO=ember-default
   - EMBER_TRY_SCENARIO=ember-release
-  - EMBER_TRY_SCENARIO=ember-lts-2.12
-  - EMBER_TRY_SCENARIO=ember-lts-2.16
-  - EMBER_TRY_SCENARIO=ember-lts-3.4
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
+  - EMBER_TRY_SCENARIO=ember-lts-3.4
+  - EMBER_TRY_SCENARIO=ember-lts-3.8
 
 matrix:
   fast_finish: true
@@ -32,17 +33,6 @@ matrix:
     - env: EMBER_TRY_SCENARIO=ember-beta
     - env: EMBER_TRY_SCENARIO=ember-canary
     - env: EMBER_TRY_SCENARIO=ember-default-with-jquery
-
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "npm config set spin false"
-  - "npm install -g npm@^4"
-
-install:
-  - npm install -g bower
-  - npm install
-  - bower install
 
 script:
   - ember try:one $EMBER_TRY_SCENARIO test --skip-cleanup
