--- a/package.json
+++ b/package.json
@@ -3,48 +3,47 @@
   "version": "0.0.19",
   "description": "Addon for pop-over",
   "scripts": {
+    "build": "ember build",
     "lint:hbs": "ember-template-lint .",
-    "start": "ember server",
+    "lint:js": "eslint .",
+    "start": "ember serve",
     "test": "ember test",
-    "test:all": "ember try:each",
-    "build": "ember build"
+    "test:all": "ember try:each"
   },
   "engines": {
     "node": "8.* || >= 10.*"
   },
   "devDependencies": {
-    "@ember/jquery": "^1.0.0",
-    "@ember/optional-features": "^1.0.0",
-    "babel-eslint": "^9.0.0",
+    "@ember/optional-features": "^1.1.0",
+    "@glimmer/component": "^1.0.0",
+    "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-attacher": "^1.0.1",
-    "ember-cli": "~3.14.0",
+    "ember-attacher": "^1.0.0",
+    "ember-auto-import": "^1.5.3",
+    "ember-cli": "~3.15.2",
     "ember-cli-app-version": "3.2.0",
     "ember-cli-content-security-policy": "^1.0.0",
-    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
     "ember-cli-ic-ajax": "1.0.0",
-    "ember-cli-inject-live-reload": "^2.0.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
-    "ember-cli-test-loader": "^2.2.0",
+    "ember-cli-template-lint": "^2.0.0",
+    "ember-cli-test-loader": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
-    "ember-decorators": "^6.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-disable-proxy-controllers": "^1.0.2",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^2.0.0",
-    "ember-qunit": "^4.4.1",
+    "ember-export-application-global": "^2.0.1",
+    "ember-load-initializers": "^2.1.1",
+    "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
-    "ember-source": "~3.13.0",
-    "ember-source-channel-url": "^2.0.0",
-    "ember-try": "^1.1.0",
-    "eslint-plugin-ember-suave": "^1.0.0",
+    "ember-source": "~3.15.0",
+    "ember-source-channel-url": "^2.0.1",
+    "ember-try": "^1.4.0",
     "eslint-plugin-node": "^11.0.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0",
+    "qunit-dom": "^1.0.0",
     "sass": "^1.16.1"
   },
   "keywords": [
@@ -58,10 +57,13 @@
     "test": "tests"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.7.3",
-    "ember-cli-htmlbars": "4.2.0",
+    "ember-cli-babel": "^7.13.0",
+    "ember-cli-htmlbars": "^4.2.0",
     "ember-cli-sass": "10.0.1",
-    "ember-decorators-polyfill": "^1.0.6"
+    "eslint-plugin-ember": "^7.7.2"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
